tests/language_tests/fail/0055_too_many_function_arguments.ee
fn identity(x) {
    return x;
}

fn main() {
    print(identity(1, 2));
}
